@@ -10,6 +10,10 @@ Version 2.38.1
 * Sync with Linux kernel 6.6 shadow stack interface.  The --enable-cet
   configure option in only supported on x86-64.
 
+The following bugs are resolved with this release:
+
+  [32810] Crash on x86-64 if XSAVEC disable via tunable
+
 Deprecated and removed features, and other changes affecting compatibility:
 
 * __rseq_size now denotes the size of the active rseq area (20 bytes
